--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h1>This is the paragraph</h1>
+    <h2>This is heading second</h2>
     <p>
         Vikrant is here
     </p>
