--- a/aboutus.html
+++ b/aboutus.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 <head>
 
     <title>Ristorante Con Fusion: About Us</title>
 
 </head>
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+<link rel="stylesheet" href="css/styles.css">
 <body>
-
+    <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+          <a href="./index.html" class="navbar-brand mr-auto">Ristorante con Fusion</a>
+          <div class="navbar-collapse" id="Navbar">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-items"><a href="./index.html" class="nav-link"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
+                  <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> AboutUs</a></li>
+                  <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Menu</a></li>
+                  <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-address-card" aria-hidden="true"></i> Contact</a></li>
+              </ul>
+          </div>  
+   </div>
+    </nav>
     <header class="jumbotron">
+
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
@@ -24,8 +44,12 @@
     </header>
 
     <div class="container">
-        <div>
-            <div>
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">AboutUs</a></li>
+            </ol>
+            <div class="col-12">
                <h3>About Us</h3>
                <hr>
             </div>
@@ -64,7 +88,7 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
@@ -76,19 +100,19 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              Tel.: +852 1234 5678<br>
-		              Fax: +852 8765 4321<br>
-		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+		             <i class="fa fa-phone" aria-hidden="true"></i> : +852 1234 5678<br>
+		              <i class="fa fa-fax"></i> : +852 8765 4321<br>
+		             <i class="fa fa-envelope" aria-hidden="true"></i> : <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a href="http://google.com/+">Google+</a>
-                        <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-                        <a href="http://www.linkedin.com/in/">LinkedIn</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
-                        <a href="mailto:">Mail</a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
            </div>
@@ -99,7 +123,7 @@
            </div>
         </div>
     </footer>
-       <script src="node_modules/jquery/dist/jquery.min.js"></script>
+       <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
        <script src=node_modules/popper.js/dist/umd/popper-utils.min.js></script>
        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> 
 </body>
