--- a/aboutus.html
+++ b/aboutus.html
@@ -15,11 +15,11 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
         <div class="container">
-            <button class="navbar-toggler" >
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar" >
                 <span class="navbar-toggler-icon"></span>
             </button>
           <a href="./index.html" class="navbar-brand mr-auto">Ristorante con Fusion</a>
-          <div class="navbar-collapse" id="Navbar">
+          <div class="collapse navbar-collapse" id="Navbar">
               <ul class="navbar-nav mr-auto">
                   <li class="nav-items"><a href="./index.html" class="nav-link"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
                   <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> AboutUs</a></li>
@@ -45,7 +45,7 @@
 
     <div class="container">
         <div class="row">
-            <ol class="col-12 breadcrumb">
+          <ol class="col-12 breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">AboutUs</a></li>
             </ol>
@@ -107,14 +107,14 @@
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg" ></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
                         <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
                         <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
                         <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
                         <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                     </div>
-                </div>
+                </div>  
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
@@ -124,7 +124,7 @@
         </div>
     </footer>
        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-       <script src=node_modules/popper.js/dist/umd/popper-utils.min.js></script>
+       <script src=node_modules/popper.js/dist/umd/popper.min.js></script>
        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script> 
 </body>
 
