--- a/index.html
+++ b/index.html
@@ -15,25 +15,23 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <a href="#" class="navbar-brand mr-auto">Ristorante con Fusion</a>
-        <div class="navbar-collapse" id="Navbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-items active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                <li class="nav-item"><a href="./aboutus.html" class="nav-link"><span class="fa fa-info fa-lg"></span> AboutUs</a></li>
-                <li class="nav-items"><a href="#" class="nav-link"><span class="fa fa-list"></span> Menu</a></li>
-                <li class="nav-items"><a href="#" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-            </ul>
+            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                </ul>
+            </div>
         </div>
-    
-        </div>
-
-    
     </nav>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -90,7 +88,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7  col-sm-5 align-self-center">
@@ -107,12 +105,12 @@
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
-                        <a class="btn btn-social btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-                        <a class="btn btn-social btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" ></i></a>
-                        <a class="btn btn-social btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg" ></i></a>
-                        <a class="btn btn-social btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-                        <a class="btn btn-social btn-google" href="http://youtube.com/"> <i class="fa fa-youtube fa-lg"></i></a>
-                        <a class="btn btn-social" href="mailto:"><i class="fa fa-envelope-o fa-lg" ></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg" ></i></a>
+                        <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg" ></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"> <i class="fa fa-youtube fa-lg"></i></a>
+                        <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o fa-lg" ></i></a>
                     </div>
                 </div>
            </div>
@@ -123,8 +121,9 @@
            </div>
         </div>
     </footer>
-<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>  
-<script src="node_modules/popper.js/dist/umd/popper-utils.min.js"></script>
-<script src="node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+   <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
