--- a/aboutus.html
+++ b/aboutus.html
@@ -18,13 +18,13 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar" >
                 <span class="navbar-toggler-icon"></span>
             </button>
-          <a href="./index.html" class="navbar-brand mr-auto">Ristorante con Fusion</a>
+          <a href="./index.html" class="navbar-brand mr-auto"><img src="img/logo.png" height="30" width="40" alt=""></a>
           <div class="collapse navbar-collapse" id="Navbar">
               <ul class="navbar-nav mr-auto">
                   <li class="nav-items"><a href="./index.html" class="nav-link"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
                   <li class="nav-items active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> AboutUs</a></li>
                   <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Menu</a></li>
-                  <li class="nav-items"><a href="#" class="nav-link"><i class="fa fa-address-card" aria-hidden="true"></i> Contact</a></li>
+                  <li class="nav-items"><a href="./contactus.html" class="nav-link"><i class="fa fa-address-card" aria-hidden="true"></i> Contact</a></li>
               </ul>
           </div>  
    </div>
@@ -37,7 +37,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
