--- a/aboutus.html
+++ b/aboutus.html
@@ -99,21 +99,88 @@
                 </div>
             </div>
         </div>
-
-
         <div class="row row-content">
-            <div>
+            <div class="12">
                 <h2>Corporate Leadership</h2>
-                <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
-                <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-                <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
-                <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-                <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
-                <h3>Alberto Somayya <small>Executive Chef</small></h3>
-                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+              <div id="accordion">
+                  <div class="card">
+                      <div class="card-header text-white" role="tab" id="peterhead">
+                        <h3 class="mb-0"><a data-toggle="collapse" data-target="#Peter"> Peter Pan <small>Chief Epicurious Officer</small></a></h3>
+                            
+                      </div>
+                     <div  class="collapse show " id="Peter" data-parent="#accordion">
+                       <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
+                     </div>
+                      <div class="card-header text-white" role="tab" >
+                        <h3 class="mb-0"><a data-toggle="collapse" data-target="#Dhanasekaran"> Dhanasekaran Witherspoon <small>Chief Food Officer</small></a></h3>
+                      </div>
+                       <div class="collapse" id="Dhanasekaran" data-parent="accordion">
+                        <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
+                       </div>
+                       <div class="card-header text-white" role="tab">
+                                <h3 class="mb-0"><a data-toggle="collapse" data-target="#Agumble"> Agumbe Tang <small>Chief Taste Officer</small></a></h3>
+                       </div>
+                       <div class="collapse" id="Agumble" data-parent="accordion">
+                        <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
+                       </div>
+                       <div class="card-header text-white" role="tab">
+                        <h3 class="mb-0"><a data-target="#Alberto" data-toggle="collapse"> Alberto Somayya <small>Executive Chef</small></a></h3>
+                       </div>
+                       <div class="collapse" id="Alberto" data-parent="accordion">
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+                       </div>
+                    </div>
+              </div>
             </div>
        </div>
+        <!-- <div class="row row-content">
+            <div class="12">
+                <h2>Corporate Leadership</h2>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a href="#Peter" class="nav-link active"
+                        role="tab" data-toggle="tab"
+                        >
+                      Peter Pan, CEO
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Dhanasekaran" class="nav-link" role="tab" data-toggle="tab">
+                            Dhanasekaran Witherspoon 
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Agumbe" class="nav-link" role="tab" data-toggle="tab">
+                            Agumbe Tang
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Alberto" class="nav-link" role="tab" data-toggle="tab">
+                            Alberto Somayya
+                        </a>
+                    </li>
+                </ul>
+
+              <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade show active" id="Peter">
+                    <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
+                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="Dhanasekaran">
+                    <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
+                    <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
+                </div>
+                <div role="tabpanel" class="tab-pane fade"  id="Agumbe">
+                    <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
+                    <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
+                </div>
+                <div role="tabpanel" class="tab-pane fade"  id="Alberto">
+                    <h3>Alberto Somayya <small>Executive Chef</small></h3>
+                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+                </div>
+              </div>
+            </div>
+       </div> -->
        <div class="row-content row">
            <div class="col-12 col-sm-9">
                <h2>Facts &amp; Figures</h2>
